fixed mockito, assertj and .toList